connected to db

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mhgerov/bamazon#readme",
   "dependencies": {
     "dotenv": "^5.0.1",
-    "inquirer": "^5.2.0"
+    "inquirer": "^5.2.0",
+    "mysql": "^2.15.0"
   }
 }
